--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~47.0.8",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "typescript": "^4.6.3"
