--- a/.github/workflows/eas-build.yml
+++ b/.github/workflows/eas-build.yml
@@ -45,4 +45,4 @@ jobs:
         run: yarn install --immutable
 
       - name: Publish update
-        run: eas build -p android --profile preview --auto-submit
+        run: eas update --branch preview --auto
